# venv-demo

./: main.py  pyproject.toml  rag.py
